Implementing simple list endpoint
